fixed gap for inputs

--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ input[type='number']::-webkit-inner-spin-button {
 
   .dates {
     justify-content: flex-start;
+    gap: 32px;
     padding-bottom: 47.5px;
   }
 
